add scripts to path

--- a/dotfiles/zsh/.envs
+++ b/dotfiles/zsh/.envs
@@ -1,1 +1,13 @@
 export FZF_DEFAULT_OPTS='--prompt="❯ " --pointer=❯ --marker=❯ --border=sharp --height=~50%'
+
+addToPath() {
+  if [[ "$PATH" != *"$1"* ]]; then
+    export PATH=$PATH:$1
+  fi
+}
+
+addToPathFront() {
+  if [[ "$PATH" != *"$1"* ]]; then
+    export PATH=$1:$PATH
+  fi
+}
