--- a/dotfiles/tmux/.tmux.conf
+++ b/dotfiles/tmux/.tmux.conf
@@ -1,5 +1,5 @@
 set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",alacritty*:RGB"
 set -g status-left-length 20
-set -g escape-time 10
+set -g escape-time 0
 set -g focus-events on
-set -sa terminal-overrides ',alacritty:RGB'
