--- a/dotfiles/config/alacritty/theme.yaml
+++ b/dotfiles/config/alacritty/theme.yaml
@@ -4,6 +4,10 @@ colors:
   primary:
     background: '0x0A0E14'
     foreground: '0xB3B1AD'
+  
+  # Cursor colors
+  cursor:
+    cursor: '0xFFFFFF'
 
   # Normal colors
   normal:
