--- a/dotfiles/config/alacritty/alacritty.yml
+++ b/dotfiles/config/alacritty/alacritty.yml
@@ -11,7 +11,7 @@ cursor:
     blinking: On 
 font:
   normal:
-    family: Fira Code
-    style: Retina
+    family: Cousine Nerd Font Mono
+    style: Regular
   size: 13
 live_config_reload: true
