enable direct mouse scrolling inside a tmux session

--- a/dotfiles/tmux/.tmux.conf
+++ b/dotfiles/tmux/.tmux.conf
@@ -3,3 +3,4 @@ set -ga terminal-overrides ",alacritty*:RGB"
 set -g status-left-length 20
 set -g escape-time 0
 set -g focus-events on
+set -g mouse on
