--- a/dotfiles/config/kitty/kitty.conf
+++ b/dotfiles/config/kitty/kitty.conf
@@ -4,13 +4,23 @@
 }}}
 
 : Cursor customization {{{
-    cursor_shape block 
+    cursor_shape underline 
 }}}
 
 : Tab bar {{{
     tab_bar_style slant
 }}}
 
+: Window layout {{{
+    window_padding_width 5
+}}}
+
 : Advanced {{{
     shell_integration no-cursor
 }}}
+
+
+# BEGIN_KITTY_THEME
+# Catppuccin-Mocha
+include themes/mocha.conf
+# END_KITTY_THEME
