--- a/dotfiles/config/starship.toml
+++ b/dotfiles/config/starship.toml
@@ -8,6 +8,6 @@ $git_status
 $character"""
 
 [character]
-success_symbol = "[π~](green)"
-error_symbol = "[π~](red)"
+success_symbol = "[π](green)[~](yellow)"
+error_symbol = "[π](red)[~](yellow)"
 
