disable workspace security for VS Code

--- a/dotfiles/code/settings.json
+++ b/dotfiles/code/settings.json
@@ -1,4 +1,6 @@
 {
+    // security
+    "security.workspace.trust.enabled": false,
     // workbench
     "workbench.startupEditor": "none",
     "workbench.colorTheme": "GitHub Dark Default",
