--- a/dotfiles/config/alacritty/alacritty.toml
+++ b/dotfiles/config/alacritty/alacritty.toml
@@ -16,8 +16,12 @@ family = "Fira Cousine"
 style = "Regular"
 
 [font.offset]
-x = 1
-y = 9
+x = 0
+y = 6
+
+[font.glyph_offset]
+x = 0
+y = 3
 
 [window]
 decorations = "Full"
@@ -26,5 +30,5 @@ opacity = 1.0
 startup_mode = "Windowed"
 
 [window.padding]
-x = 3
-y = 3
+x = 0
+y = 1
